# cookiecutter-c-3pyo

./: .gitignore  .pre-commit-config.yaml  cookiecutter.json  pyproject.toml
.github/workflows/: build.yaml
tests/: test_bake_project.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  pyproject.toml
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_slug }}.py
